FIX alignement liste puce

--- a/css/contentlight.css
+++ b/css/contentlight.css
@@ -106,7 +106,7 @@ li p {
 }
 
 .ulbis {
-	margin-left: 25px;
+	margin-left: 20px;
 	padding-left: 0px;
 }
 
